# cridecoder

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  KNOWN_GAPS.md  README.md  cridecoder.pyi  pyproject.toml
.github/: copilot-Instructions.md  copilot-instructions.md
.github/workflows/: ci.yml  release-crate.yml  release-python.yml
examples/: debug_acb.rs  hca_attrib.rs  hca_parallel.rs  profile_acb.rs  profile_hca.rs  test_acb.rs  test_hca.rs  test_usm.rs
src/: acb.rs  hca.rs  lib.rs  python.rs  reader.rs  usm.rs
src/acb/: afs.rs  builder.rs  consts.rs  decode.rs  extractor.rs  track.rs  utf.rs
src/hca/: ath.rs  bitreader.rs  cipher.rs  decoder.rs  encoder.rs  hca_file.rs  imdct.rs  tables.rs
src/usm/: builder.rs  extractor.rs  metadata.rs
tests/: integration_tests.rs  test_python.py
