[package]
name = "cridecoder"
version = "0.1.1"
edition = "2021"
description = "CRI codec library for ACB/AWB, HCA audio, and USM video extraction"
license = "MIT"
authors = ["Team-Haruki"]
repository = "https://github.com/Team-Haruki/cridecoder"
homepage = "https://github.com/Team-Haruki/cridecoder"
readme = "README.md"
keywords = ["cri", "hca", "acb", "usm", "audio"]
categories = ["multimedia::audio", "multimedia::video", "parser-implementations"]
exclude = ["*.acb", "*.usm", "*.hca", "*.wav", "*.m2v", "test_output_*"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
byteorder = "1.5"
thiserror = "2.0.18"
encoding_rs = "0.8.35"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
hex = "0.4.3"
pyo3 = { version = "0.28", features = ["extension-module"], optional = true }

[dev-dependencies]
tempfile = "3.10"

[features]
default = []
python = ["pyo3"]

[[example]]
name = "test_acb"
path = "examples/test_acb.rs"

[[example]]
name = "test_usm"
path = "examples/test_usm.rs"
